<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/websiteEdittext"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:text="@string/edittextUri"
       />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/buttonUri"
        android:onClick="openWebsite"/>

    <EditText
        android:id="@+id/locationEdittext"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittextLoc" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/buttonLoc"
        android:onClick="openLocation"/>

    <EditText
        android:id="@+id/shareEdittext"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:text="@string/edittextShare" />

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/buttonShare"
        android:onClick="shareText"/>
</LinearLayout>

